--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,15 @@
-h1 {
-  color: pink;
+.container {
+  border: 1px solid red;
+  width: 75%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.flex-box-container {
+  display: flex;
+  border: 1px solid blue;
+}
+
+.flex-box-container img {
+    
 }
