Created cat generator button

--- a/src/style.css
+++ b/src/style.css
@@ -7,9 +7,13 @@
 
 .flex-box-container {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
   border: 1px solid blue;
 }
 
 .flex-box-container img {
-    
+  border: 1px solid green;
+  padding: 10px;
+  box-shadow: 0px 10px rgba(0, 0, 0, 0.7);
 }
